# MathematicalParser

./: .gitignore  CMakeLists.txt  Makefile  README.txt
src/backend/: CMakeLists.txt  convert.c  lexer.c  parser.c  syntax_check.c  token.c
src/backend/headers/: parser.h  token.h
src/frontend/: CMakeLists.txt  main.c  tokenprint.c
src/frontend/headers/: tokenprint.h
unittest/: CMakeLists.txt  test.c
unittest/tool/: CMakeLists.txt  unittest.c  unittest.h
